# shape-parameter-test

./: .gitignore  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  setup.py
docs/: ALTERNATIVE_TRANSFORMS_ANALYSIS.md  BENCHMARKING_RESULTS_SUMMARY.md  COMPREHENSIVE_PARAMETER_REDUCTION_SUMMARY.md  COVARIANCE_COMPENSATION_ANALYSIS.md  COVARIANCE_OPTIMIZATION_SUMMARY.md  EXPRESSIBILITY_AND_OPTIMIZATION_SOLUTIONS.md  FINAL_OPTIMAL_SOLUTION_SUMMARY.md  MULTI_GROUND_TRUTH_EVALUATION_SUMMARY.md  MULTI_SEED_COMPARISON_SUMMARY.md  PROJECTION_AND_JIT_ANALYSIS.md  SCALING_ANALYSIS.md  SHAPE_PARAMETER_ENCODING_ANALYSIS.md  SHAPE_PARAMETER_TRANSFORM_SUMMARY.md  SHAPE_TRANSFORM_DIRECT_INVERSE_SUMMARY.md  SHAPE_TRANSFORM_EXPRESSIBILITY_INTEGRATION.md  SMOOTH_TRANSFORMS_ANALYSIS.md  STANDARD_WITH_SHAPE_TRANSFORM_SUMMARY.md  WEIGHT_SCALING_ANALYSIS.md  WEIGHT_SCALING_FINAL_SUMMARY.md
examples/: basic_usage.py
requirements/: requirements.txt
scripts/: advanced_shape_transform_vs_standard_comparison.py  apply_weight_scaling_recommendations.py  benchmarking_plots.py  comprehensive_derivative_analysis.py  comprehensive_derivative_analysis_simple.py  covariance_optimization_analysis.py  covariance_weight_constraint_analysis.py  derivative_hessian_evaluation.py  efficient_derivative_evaluation.py  expressibility_analysis.py  final_optimal_solution.py  improved_parameter_reduction_solution.py  multi_ground_truth_evaluation.py  multi_seed_comparison.py  optimal_parameter_reduction_solution.py  optimized_covariance_model.py  pinn_allen_cahn_1d_comparison.py  pinn_allen_cahn_comparison.py  pinn_ns_steady_cylinder.py  pinn_ns_steady_cylinder_fd_comparison.py  pinn_ns_transient_cylinder.py  pinn_poisson_comparison.py  pinn_poisson_meta_init_study.py  pinn_wave1d_comparison.py  shape_transform_direct_inverse_benchmark.py  shape_transform_expressibility_integration.py  simple_derivative_evaluation.py  simple_derivative_test.py  standard_with_shape_transform_comparison.py  tanh_scaling_analysis.py  test_scaling_factors.py  train_alternatives_comparison.py  train_comparison.py  train_comparison_optimized.py  train_optimizer_comparison.py  train_optimizer_hyperparameter_tuning.py  train_smooth_alternatives.py  train_transform_comparison.py  weight_scaling_analysis.py
src/: __init__.py  cli.py
src/model/: __init__.py  rbf_model.py  rbf_model_alternatives.py  shape_parameter_alternatives.py  shape_parameter_transform.py  shape_parameter_transform_smooth.py  standard_model.py
tests/: test_models.py
